--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,16 @@ before_install:
 
 script:
  - docker run -e CI=true gudavallis/docker-react npm run test -- --coverage
+
+deploy:
+ provider: elasticbeanstalk
+ region: "us-east-1"
+ app: "docker"
+ env: "Docker-env"
+ bucket_name: "elasticbeanstalk-us-east-1-282036472422"
+ bucket_path: "docker"
+ on:
+  branch: main
+ access_key_id: $AWS_ACCESS_KEY
+ secret_access_key:
+  secure: "$AWS_SECRET_KEY"
